--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emile Shah</title>
+    <title>emile shah</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,10 +22,10 @@
         <h1>Emile Shah</h1>
 
         <ul class="categories">
-            <li><a href="world.html">world</a></li>
-            <li><a href="venture.html">venture</a></li>
-            <li><a href="events.html">events</a></li>
-            <li><a href="community.html">community</a></li>
+            <li><a href="world.html">global path</a></li>
+            <li><a href="venture.html">venture path</a></li>
+            <li><a href="events.html">event crossings</a></li>
+            <li><a href="community.html">building community</a></li>
         </ul>
     </div>
 
