--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <ul class="categories">
             <li><a href="world.html">global path</a></li>
             <li><a href="venture.html">venture path</a></li>
+            <li><a href="community.html">coding path</a></li>
             <li><a href="events.html">event crossings</a></li>
-            <li><a href="community.html">building community</a></li>
         </ul>
     </div>
 
