--- a/world.html
+++ b/world.html
@@ -13,9 +13,9 @@
         <h1 class="page-title">world</h1>
 
         <div class="content-section">
-            <h2 class="section-title">// Introduction</h2>
+            <h2 class="section-title">// introduction</h2>
             <div class="section-content">
-                <p>Add your introduction text here. Describe your perspective on global issues, international experiences, or worldview.</p>
+                <p>i like travelling and also doing interesting things while travelling!</p>
             </div>
         </div>
 
@@ -30,24 +30,24 @@
             <h2 class="section-title">// Projects & Experiences</h2>
             <ul class="items-list">
                 <li>
-                    <div class="item-title">Project Title 1</div>
-                    <div class="item-date">Date / Location</div>
+                    <div class="item-title">Japan-America Student Conference</div>
+                    <div class="item-date">august 2025, from america to japan</div>
                     <div class="item-description">
-                        Add description of your project or experience here. Include details about what you did, what you learned, and the impact.
+                        as american orientation lead coordinator and american executive committee secretary for the japan-america student conference, i organized the full three-day san francisco orientation for 36 delegates, handling all logistics from programming to coordination. i hosted the first bay area jasc delegate–alumni event in over a decade at salesforce tower, bringing together more than 100 delegates and alumni. i also led an lgbtq+ dialogue with japanese politicians, lawyers, and activists, and coordinated a rivian site visit before we departed for japan. in addition, i developed and led the environmental entrepreneurship roundtable, selecting and guiding eight japanese and american delegates in exploring startups and envirotech in japan. 
                     </div>
                 </li>
                 <li>
-                    <div class="item-title">Project Title 2</div>
-                    <div class="item-date">Date / Location</div>
+                    <div class="item-title">studying ww2 in france</div>
+                    <div class="item-date">july 2022</div>
                     <div class="item-description">
-                        Add description of your project or experience here. Include details about what you did, what you learned, and the impact.
+                        wrote an essay analyzing the breakdown of human empathy in world war ii and won a full scholarship to france to study ww2 with the national ww2 museum's normandy academy
                     </div>
                 </li>
                 <li>
-                    <div class="item-title">Project Title 3</div>
-                    <div class="item-date">Date / Location</div>
+                    <div class="item-title">?</div>
+                    <div class="item-date">spring 2026</div>
                     <div class="item-description">
-                        Add description of your project or experience here. Include details about what you did, what you learned, and the impact.
+                        might be going somewhere cool!
                     </div>
                 </li>
             </ul>
