--- a/world.html
+++ b/world.html
@@ -31,7 +31,7 @@
             <ul class="items-list">
                 <li>
                     <div class="item-title">Japan-America Student Conference</div>
-                    <div class="item-date">august 2025, from america to japan</div>
+                    <div class="item-date">august 2025</div>
                     <div class="item-description">
                         as american orientation lead coordinator and american executive committee secretary for the japan-america student conference, i organized the full three-day san francisco orientation for 36 delegates, handling all logistics from programming to coordination. i hosted the first bay area jasc delegate–alumni event in over a decade at salesforce tower, bringing together more than 100 delegates and alumni. i also led an lgbtq+ dialogue with japanese politicians, lawyers, and activists, and coordinated a rivian site visit before we departed for japan. in addition, i developed and led the environmental entrepreneurship roundtable, selecting and guiding eight japanese and american delegates in exploring startups and envirotech in japan. 
                     </div>
